--- a/.github/ISSUE_TEMPLATE/------.md
+++ b/.github/ISSUE_TEMPLATE/------.md
@@ -33,7 +33,7 @@ assignees: ''
 
 >先在 issues 搜一下是否有相似问题，没有再发,否则直接关闭
 
->不处理别人搭建的线上服务的问题,此项目不提供任何线上服务,请自行搭建
+>不处理别人搭建的线上服务的问题,此项目提供任何线上服务不保证质量,请自行搭建
 
 >重现步骤尽量详细,不能含糊不清，包含请求地址和对应参数以及操作过程描述,不是每个人都喜欢猜别人遇到了什么问题和找参数一个个试,也比较浪费时间
 
